--- a/src/locations/templates/itinerary_overview.html
+++ b/src/locations/templates/itinerary_overview.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="bg-green-700 py-8">
-    <div class="max-w-3xl md:max-w-5xl mx-auto p-4 bg-white rounded-xl overflow-hidden drop-shadow-lg">
+    <div class="max-w-3xl md:max-w-5xl lg:max-w-7xl xl:max-w-[1800px] 2xl:max-w-full mx-auto p-4 bg-white rounded-xl overflow-hidden drop-shadow-lg">
         <h1 class="text-3xl font-bold mb-4 text-slate-900">{{ itinerary.name }}</h1>
         <p class="text-gray-600 mb-6">{{ itinerary.description }}</p>
 
