--- a/src/blog/templates/blog/author_index_page.html
+++ b/src/blog/templates/blog/author_index_page.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="bg-green-700 py-8 flex-grow">
-    <div class="max-w-3xl md:max-w-5xl mx-auto p-4">
+    <div class="max-w-3xl md:max-w-5xl lg:max-w-7xl xl:max-w-[1800px] 2xl:max-w-full mx-auto p-4">
         <div class="bg-white rounded-xl overflow-hidden drop-shadow">
             <div class="p-8">
                 <h1 class="text-4xl font-bold mb-4 text-black">{{ page.title }}</h1>
