--- a/src/blog/templates/blog/includes/filter-bar.html
+++ b/src/blog/templates/blog/includes/filter-bar.html
@@ -1,6 +1,6 @@
 {% load wagtailcore_tags wagtailimages_tags user_tags %}
 
-<div class="max-w-3xl md:max-w-5xl mx-auto drop-shadow-lg">
+<div class="max-w-3xl md:max-w-5xl lg:max-w-7xl xl:max-w-[1800px] 2xl:max-w-full mx-auto drop-shadow-lg">
 
     <div class="transition p-4 rounded-lg relative min-h-16">
     
