--- a/src/brazil_blog/templates/includes/footer.html
+++ b/src/brazil_blog/templates/includes/footer.html
@@ -1,7 +1,7 @@
 {% load cache %}
 {% cache 500 footer %}
 <footer class="bg-blue-800 text-white">
-    <div class="max-w-3xl md:max-w-5xl px-4 py-4 mx-auto">
+    <div class="max-w-3xl md:max-w-5xl lg:max-w-7xl xl:max-w-[1800px] 2xl:max-w-full px-4 py-4 mx-auto">
         <p>Built with Wagtail</p>
     </div>
 </footer>
