--- a/src/blog/templates/blog/author_page.html
+++ b/src/blog/templates/blog/author_page.html
@@ -3,9 +3,13 @@
 
 {% block content %}
 <div class="bg-green-700 py-8 flex-grow">
-    <div class="flex flex-col gap-4 max-w-3xl md:max-w-5xl mx-auto p-4 bg-white rounded-xl overflow-hidden drop-shadow">
-        <h1 class="text-4xl font-bold text-black">{{ page.title }}</h1>
-        
+    <div class="flex flex-col gap-4 max-w-3xl md:max-w-5xl lg:max-w-7xl xl:max-w-[1500px] mx-auto p-4 bg-white rounded-xl overflow-hidden drop-shadow">
+        <div class="flex flex-row justify-between items-center">
+            <h1 class="text-4xl font-bold text-black">{{ page.title }}</h1>
+            {% include "blog/includes/subscribe-author.html" with author=page.user user=user class="h-10 w-10" %}
+        </div>
+
+
         <div class="flex flex-row gap-4 items-center">
             <div>
                 {% user_avatar page.user %}
