--- a/src/blog/templates/blog/includes/blogpost-grid.html
+++ b/src/blog/templates/blog/includes/blogpost-grid.html
@@ -1,6 +1,6 @@
 {% load i18n static wagtailcore_tags wagtailimages_tags custom_image_tags user_tags %}
 
-<div class="max-w-3xl md:max-w-5xl w-full mx-auto grid md:grid-cols-2 lg:grid-cols-3 gap-4" id="grid">
+<div class="max-w-3xl md:max-w-5xl lg:max-w-7xl xl:max-w-[1800px] 2xl:max-w-full w-full mx-auto grid md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-4" id="grid">
     {% for post in blogposts %}
         <a 
             href="{% pageurl post %}"
@@ -16,26 +16,35 @@
                 {% else %}
                     <div class="h-80 bg-gray-300"></div>
                 {% endif %}
+                <div class="absolute top-0 right-0 p-2">
+                    <div class="flex items-center ml-auto bg-yellow-500 bg-opacity-60 rounded-full px-1">
+                        <span class="text-xl">😻</span>
+                        <span class="pr-1 mt-0.5">{{ post.specific.like_count }}</span>
+                        <span class="text-xl">💬</span>
+                        <span class="pr-1">{{ post.specific.comments.count }}</span>
+                    </div>
+                </div>
                 <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end bg-gradient-to-t to-transparent from-yellow-500">
                     <h2 class="header-text-color font-bold text-4xl group-hover:underline hover:underline decoration-wavy mb-2 pb-2.5 line-clamp-2">{{ post.title }} </h2>
                     <div class="flex flex-col justify-between gap-2 text-sm">
-                        <div class="flex flex-row items-center flex-wrap gap-2">
+                        <div class="flex flex-row items-center gap-2">
                             {% post_user_avatar post 'w-8 h-8 rounded-full object-cover' %}
-                            {{ post.specific.date | date:"d-m-Y H:i" }}
-                            <div class="flex items-center space-x-1 ml-auto bg-white rounded-full px-1">
-                                <span class="text-xl">😻</span>
-                                <span class="font-bold pr-1 mt-0.5">{{ post.specific.like_count }}</span>
-                                <span class="text-xl">💬</span>
-                                <span class="font-bold pr-1">{{ post.specific.comments.count }}</span>
+                            <div class="flex flex-row justify-between w-full">
+                                <div>
+                                    {{ post.specific.date | date:"d-m-Y H:i" }}
+                                </div>
+                                <div>
+                                    {% for location in post.location.all %}
+                                    📍{{location.name}}
+                                    {% endfor %}
+                                </div>
                             </div>
                         </div>
-                        <div>
-                            {% if post.specific.intro %}
-                                <div class="line-clamp-2">{{ post.specific.intro }}</div>
-                            {% else %}
-                                {{ post.specific.body|richtext|slice:":500" }}
-                            {% endif %}
-                        </div>
+                        {% if post.specific.intro %}
+                            <div class="line-clamp-2">{{ post.specific.intro }}</div>
+                        {% else %}
+                            {{ post.specific.body|richtext|slice:":500" }}
+                        {% endif %}
                     </div>
                 </div>
             </div>
