--- a/src/blog/templates/blog/blog_index_page.html
+++ b/src/blog/templates/blog/blog_index_page.html
@@ -7,7 +7,7 @@
 <div class="bg-green-700 py-8 px-4 flex-grow">
     {% include "blog/includes/filter-bar.html" %}
     {% include "blog/includes/blogpost-grid.html" with blogposts=blogpages only %}
-    <div class="container mx-auto mt-8">
+    <div class="container mx-auto mt-8 max-w-3xl md:max-w-5xl lg:max-w-7xl xl:max-w-[1800px] 2xl:max-w-full">
         {% include "blog/includes/blog-route-map.html" with blog_posts=blogpages itinerary=itinerary %}
     </div>
     {% include "blog/includes/tukanchamon.html" %}
