possible safari fix for blogpost header

--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -37,7 +37,7 @@
                     <div class="flex justify-between gap-4">
                         <div class="flex-col flex-1">
                             <h1 class="header-text-color flex-wrap font-bold text-xl md:text-4xl line-clamp-3">{{ page.title }}</h1>
-                            <div class="flex justify-between items-center">
+                            <div class="flex justify-between items-center" style="-webkit-justify-content: space-between">
                                 <div class="flex flex-col">
                                     <div class="text-sm italic">{{ page.specific.date | date:"d-m-Y H:i" }}</div>
                                     <div class="text-sm">
