--- a/src/brazil_blog/static/css/brazil_blog_compiled.css
+++ b/src/brazil_blog/static/css/brazil_blog_compiled.css
@@ -1471,10 +1471,6 @@ select {
   z-index: 30;
 }
 
-.col-auto {
-  grid-column: auto;
-}
-
 .float-left {
   float: left;
 }
@@ -1568,13 +1564,6 @@ select {
   display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 3;
-}
-
-.line-clamp-1 {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
 }
 
 .block {
@@ -1746,6 +1735,14 @@ select {
   width: 100vw;
 }
 
+.min-w-8 {
+  min-width: 2rem;
+}
+
+.min-w-36 {
+  min-width: 9rem;
+}
+
 .max-w-3xl {
   max-width: 48rem;
 }
@@ -1760,10 +1757,6 @@ select {
 
 .max-w-xs {
   max-width: 20rem;
-}
-
-.max-w-5xl {
-  max-width: 64rem;
 }
 
 .flex-1 {
@@ -1839,10 +1832,6 @@ select {
   list-style-type: none;
 }
 
-.grid-flow-col {
-  grid-auto-flow: column;
-}
-
 .flex-row {
   flex-direction: row;
 }
@@ -1861,10 +1850,6 @@ select {
 
 .items-start {
   align-items: flex-start;
-}
-
-.items-end {
-  align-items: flex-end;
 }
 
 .items-center {
@@ -1897,12 +1882,6 @@ select {
 
 .gap-4 {
   gap: 1rem;
-}
-
-.space-x-1 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(0.25rem * var(--tw-space-x-reverse));
-  margin-left: calc(0.25rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -2127,10 +2106,6 @@ select {
 .bg-yellow-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(202 138 4 / var(--tw-bg-opacity));
-}
-
-.bg-opacity-80 {
-  --tw-bg-opacity: 0.8;
 }
 
 .bg-opacity-60 {
@@ -2435,14 +2410,6 @@ select {
   opacity: 0.5;
 }
 
-.opacity-80 {
-  opacity: 0.8;
-}
-
-.opacity-20 {
-  opacity: 0.2;
-}
-
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -2731,28 +2698,20 @@ select {
     display: flex;
   }
 
-  .sm\:h-16 {
-    height: 4rem;
-  }
-
   .sm\:h-12 {
     height: 3rem;
   }
 
-  .sm\:h-14 {
-    height: 3.5rem;
-  }
-
-  .sm\:w-16 {
-    width: 4rem;
+  .sm\:h-16 {
+    height: 4rem;
   }
 
   .sm\:w-12 {
     width: 3rem;
   }
 
-  .sm\:w-14 {
-    width: 3.5rem;
+  .sm\:w-16 {
+    width: 4rem;
   }
 
   .sm\:flex-row {
@@ -2802,11 +2761,6 @@ select {
     padding: 3rem;
   }
 
-  .md\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
-
   .md\:text-3xl {
     font-size: 1.875rem;
     line-height: 2.25rem;
@@ -2829,10 +2783,6 @@ select {
 }
 
 @media (min-width: 1024px) {
-  .lg\:max-w-6xl {
-    max-width: 72rem;
-  }
-
   .lg\:max-w-7xl {
     max-width: 80rem;
   }
@@ -2844,26 +2794,9 @@ select {
   .lg\:p-24 {
     padding: 6rem;
   }
-
-  .lg\:px-0 {
-    padding-left: 0px;
-    padding-right: 0px;
-  }
 }
 
 @media (min-width: 1280px) {
-  .xl\:max-w-full {
-    max-width: 100%;
-  }
-
-  .xl\:max-w-7xl {
-    max-width: 80rem;
-  }
-
-  .xl\:max-w-\[1600px\] {
-    max-width: 1600px;
-  }
-
   .xl\:max-w-\[1500px\] {
     max-width: 1500px;
   }
@@ -2875,19 +2808,11 @@ select {
   .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
-
-  .xl\:grid-cols-5 {
-    grid-template-columns: repeat(5, minmax(0, 1fr));
-  }
 }
 
 @media (min-width: 1536px) {
   .\32xl\:max-w-full {
     max-width: 100%;
-  }
-
-  .\32xl\:max-w-\[full\] {
-    max-width: full;
   }
 
   .\32xl\:grid-cols-5 {
