style: Add a bit more spacing to the like/comment icons on a blog post grid tile

--- a/src/blog/templates/blog/includes/blogpost-grid.html
+++ b/src/blog/templates/blog/includes/blogpost-grid.html
@@ -17,10 +17,10 @@
                     <div class="h-80 bg-gray-300"></div>
                 {% endif %}
                 <div class="absolute top-0 right-0 p-2">
-                    <div class="flex items-center ml-auto bg-yellow-500 bg-opacity-60 rounded-full px-1">
-                        <span class="text-xl">😻</span>
-                        <span class="pr-1 mt-0.5">{{ post.specific.like_count }}</span>
-                        <span class="text-xl">💬</span>
+                    <div class="flex items-center ml-auto bg-yellow-500 bg-opacity-60 rounded-full px-2 py-1">
+                        <span class="text-xl -translate-y-0.5">😻</span>
+                        <span class="pr-1">{{ post.specific.like_count }}</span>
+                        <span class="text-xl ml-1">💬</span>
                         <span class="pr-1">{{ post.specific.comments.count }}</span>
                     </div>
                 </div>
