showing list reactive #84

--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -29,7 +29,6 @@
                             <div class="text-xl rounded-full -ml-1">😻</div>
                             <div class="group">
                                 <div id="like-count" data-post-id="{{ page.id }}" class="font-bold block mt-0.5">{{ page.like_count }}</div>
-                                {% if page.like_count > 0 %}
                                     <ul
                                     id="like-list"
                                     class="absolute top-10 right-4 min-w-24 w-max max-h-24 overflow-auto flex flex-col items-start z-30 px-4 py-2 bg-blue-500 rounded-3xl opacity-0 pointer-events-none hover:opacity-100 group-hover:opacity-100 group-hover:pointer-events-auto group-hover:drop-shadow transition">    
@@ -39,7 +38,6 @@
                                             </li>
                                         {% endfor %}
                                     </ul>
-                                {% endif %}
                             </div>
                         </button>
                     </div>
@@ -151,12 +149,17 @@
         .then(data => {
             likeCount.textContent = data.like_count;
             if (data.liked) {
-                    likeButton.classList.remove('bg-green-600', 'text-gray-700', 'hover:bg-green-700', 'bg-opacity-80');
-                    likeButton.classList.add('bg-blue-600', 'text-white', 'hover:bg-blue-700');
-                } else {
-                    likeButton.classList.remove('bg-blue-600', 'text-white', 'hover:bg-blue-700');
-                    likeButton.classList.add('bg-green-600', 'text-gray-700', 'hover:bg-green-700', 'bg-opacity-80');
-                }
+                likeButton.classList.remove('bg-green-600', 'text-gray-700', 'hover:bg-green-700', 'bg-opacity-80');
+                likeButton.classList.add('bg-blue-600', 'text-white', 'hover:bg-blue-700');
+            } else {
+                likeButton.classList.remove('bg-blue-600', 'text-white', 'hover:bg-blue-700');
+                likeButton.classList.add('bg-green-600', 'text-gray-700', 'hover:bg-green-700', 'bg-opacity-80');
+            }
+            if (data.like_count > 0) {
+                likeList.classList.add('group-hover:opacity-100', 'hover:opacity-100');
+            } else {
+                likeList.classList.remove('group-hover:opacity-100', 'hover:opacity-100');
+            }
         });
     });
 
@@ -172,10 +175,10 @@
         .then(response => response.json())
         .then(data => {
             if (data.like_count > 0) {
-                    likeList.classList.add('group-hover:opacity-100', 'hover:opacity-100');
-                } else {
-                    likeList.classList.remove('group-hover:opacity-100', 'hover:opacity-100');
-                }
+                likeList.classList.add('group-hover:opacity-100', 'hover:opacity-100');
+            } else {
+                likeList.classList.remove('group-hover:opacity-100', 'hover:opacity-100');
+            }
         });
     })
 
