--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -21,23 +21,34 @@
                             data-post-id="{{ page.id }}" 
                             class="flex items-center space-x-2 px-2 py-1 rounded-full transition duration-200 ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-600
                             {% if user in page.likes.all %}
-                                bg-blue-600 text-white hover:bg-blue-700
+                                bg-blue-500 text-white hover:bg-blue-700
                             {% else %}
-                                bg-white text-gray-700 hover:bg-gray-300
+                                bg-green-600 text-gray-700 hover:bg-green-700 bg-opacity-80
                             {% endif %}
                         ">
                             <div class="text-xl rounded-full -ml-1">😻</div>
-                            <div id="like-count" class="font-bold block mt-0.5">{{ page.like_count }}</div>
+                            <div class="group">
+                                <div id="like-count" data-post-id="{{ page.id }}" class="font-bold block mt-0.5">{{ page.like_count }}</div>
+                                    <ul
+                                    id="like-list"
+                                    class="absolute top-10 right-4 min-w-24 w-max max-h-24 overflow-auto flex flex-col items-start z-30 px-4 py-2 bg-blue-500 rounded-3xl opacity-0 pointer-events-none hover:opacity-100 group-hover:opacity-100 group-hover:pointer-events-auto group-hover:drop-shadow transition">    
+                                        {% for user in page.likes.all %}
+                                            <li id="like-list-user" class="text-sm">
+                                                {% user_display_name user %}
+                                            </li>
+                                        {% endfor %}
+                                    </ul>
+                            </div>
                         </button>
                     </div>
-                    {% include "blog/includes/subscribe-author.html" with author=page.author user=user class="h-10 w-10" %}
+                    {% include "blog/includes/subscribe-author.html" with author=page.author user=user class="h-10 w-10 bg-opacity-80" %}
                 </div>
                 <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end gap-2 bg-gradient-to-t to-transparent from-yellow-500">
 
                     <div class="flex justify-between gap-4">
                         <div class="flex-col flex-1">
                             <h1 class="header-text-color flex-wrap font-bold text-xl md:text-4xl line-clamp-3">{{ page.title }}</h1>
-                            <div class="flex justify-between items-center">
+                            <div class="flex justify-between items-center" style="-webkit-justify-content: space-between">
                                 <div class="flex flex-col">
                                     <div class="text-sm italic">{{ page.specific.date | date:"d-m-Y H:i" }}</div>
                                     <div class="text-sm">
@@ -122,6 +133,8 @@
     const likeButton = document.getElementById('like-button');
     const likeCount = document.getElementById('like-count');
     const likeText = document.getElementById('like-text');
+    const likeList = document.getElementById('like-list');
+    const likeListUser = document.getElementById('like-list-user');
 
     likeButton.addEventListener('click', function() {
         const postId = this.dataset.postId;
@@ -136,14 +149,38 @@
         .then(data => {
             likeCount.textContent = data.like_count;
             if (data.liked) {
-                    likeButton.classList.remove('bg-white', 'text-gray-700', 'hover:bg-gray-300');
-                    likeButton.classList.add('bg-blue-600', 'text-white', 'hover:bg-blue-700');
-                } else {
-                    likeButton.classList.remove('bg-blue-600', 'text-white', 'hover:bg-blue-700');
-                    likeButton.classList.add('bg-white', 'text-gray-700', 'hover:bg-gray-300');
-                }
+                likeButton.classList.remove('bg-green-600', 'text-gray-700', 'hover:bg-green-700', 'bg-opacity-80');
+                likeButton.classList.add('bg-blue-600', 'text-white', 'hover:bg-blue-700');
+            } else {
+                likeButton.classList.remove('bg-blue-600', 'text-white', 'hover:bg-blue-700');
+                likeButton.classList.add('bg-green-600', 'text-gray-700', 'hover:bg-green-700', 'bg-opacity-80');
+            }
+            if (data.like_count > 0) {
+                likeList.classList.add('group-hover:opacity-100', 'hover:opacity-100');
+            } else {
+                likeList.classList.remove('group-hover:opacity-100', 'hover:opacity-100');
+            }
         });
     });
+
+    likeCount.addEventListener('mouseover', function() {
+        const postId = this.dataset.postId;
+        fetch(`/blog/api/likes/${postId}/`, {
+            method: 'GET',
+            headers: {
+                'X-CSRFToken': getCookie('csrftoken'),
+                'Content-Type': 'application/json'
+            },
+        })
+        .then(response => response.json())
+        .then(data => {
+            if (data.like_count > 0) {
+                likeList.classList.add('group-hover:opacity-100', 'hover:opacity-100');
+            } else {
+                likeList.classList.remove('group-hover:opacity-100', 'hover:opacity-100');
+            }
+        });
+    })
 
     function getCookie(name) {
         let cookieValue = null;
