Fix: Update blog post grid tile styling

--- a/src/blog/templates/blog/includes/blogpost-grid.html
+++ b/src/blog/templates/blog/includes/blogpost-grid.html
@@ -14,7 +14,7 @@
                          data-src="{{ post.specific.image|advanced_image:'fill-512x512,quality-90' }}"
                          alt="{{ post.specific.image.alt }}">
                 {% else %}
-                    <div class="h-80 bg-gray-300"></div>
+                    <div class="h-full bg-gray-300"></div>
                 {% endif %}
                 <div class="absolute top-0 right-0 p-2">
                     <div class="flex items-center ml-auto bg-yellow-500 bg-opacity-60 rounded-full px-2 py-1">
