style: Improve likes count styling

--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -26,9 +26,9 @@
                                 bg-green-600 text-gray-700 hover:bg-green-700 bg-opacity-80
                             {% endif %}
                         ">
-                            <div class="text-xl rounded-full -ml-1">😻</div>
+                            <div class="text-xl rounded-full -translate-y-0.5">😻</div>
                             <div class="group">
-                                <div id="like-count" data-post-id="{{ page.id }}" class="font-bold block mt-0.5">{{ page.like_count }}</div>
+                                <div id="like-count" data-post-id="{{ page.id }}" class="font-bold text-white drop-shadow">{{ page.like_count }}</div>
                                     <ul
                                     id="like-list"
                                     class="absolute top-10 right-4 min-w-24 w-max max-h-24 overflow-auto flex flex-col items-start z-30 px-4 py-2 bg-blue-500 rounded-3xl opacity-0 pointer-events-none hover:opacity-100 group-hover:opacity-100 group-hover:pointer-events-auto group-hover:drop-shadow transition">    
