--- a/src/blog/templates/blog/includes/subscribe-author.html
+++ b/src/blog/templates/blog/includes/subscribe-author.html
@@ -10,10 +10,10 @@
         {% else %}
             focus:outline-none bg-green-600 hover:bg-green-700 text-white block flex-0 w-10 h-10 sm:w-16 sm:h-16 rounded-full
         {% endif %}">
-        {% if user in author.subscribers.all %}
+        {% if is_subscribed %}
             🔕
         {% else %}
-            🔔  
+            🔔
         {% endif %}
     </button>
 
