--- a/src/locations/templates/itinerary_overview.html
+++ b/src/locations/templates/itinerary_overview.html
@@ -3,16 +3,16 @@
 
 {% block content %}
 <div class="bg-green-700 py-8">
-    <div class="max-w-3xl md:max-w-5xl lg:max-w-7xl xl:max-w-[1800px] 2xl:max-w-full mx-auto p-4 bg-white rounded-xl overflow-hidden drop-shadow-lg">
+    <div class="max-w-3xl md:max-w-5xl mx-auto p-4 bg-white rounded-xl overflow-hidden drop-shadow-lg">
         <h1 class="text-3xl font-bold mb-4 text-slate-900">{{ itinerary.name }}</h1>
         <div class="mb-6 prose">{{ itinerary.description|richtext }}</div>
 
         <div class="space-y-4">
             {% for stop in itinerary.stops.all %}
                 <div class="bg-gray-50 rounded-lg p-4 transition-all duration-300 ease-in-out relative border-l-4 border {% if current_stop_id == stop.id %}border-green-700{% else %}border-gray-300{% endif %}">
-                    <!-- Vertical line -->
                     {% if not forloop.last %}
-                        <div class="translate-y-full absolute left-8 top-0 bottom-0 w-0.5 bg-gray-500"></div>
+                        <!-- Vertical line -->
+                        <div class="absolute left-8 top-full h-4 w-0.5 bg-gray-500"></div>
                     {% endif %}
                     
                     <div class="flex items-start space-x-4">
