--- a/src/locations/templates/itinerary_overview.html
+++ b/src/locations/templates/itinerary_overview.html
@@ -2,8 +2,8 @@
 {% load static wagtailcore_tags markup_tags %}
 
 {% block content %}
-<div class="bg-green-700 py-8">
-    <div class="max-w-3xl md:max-w-5xl mx-auto p-4 bg-white rounded-xl overflow-hidden drop-shadow-lg">
+<div class="bg-green-700 p-0 md:py-8">
+    <div class="max-w-3xl mx-auto p-4 bg-white md:rounded-xl overflow-hidden drop-shadow-lg">
         <h1 class="text-3xl font-bold mb-4 text-slate-900">{{ itinerary.name }}</h1>
         <div class="mb-6 prose">{{ itinerary.description|richtext }}</div>
 
