--- a/src/blog/templates/blog/blog_page.html
+++ b/src/blog/templates/blog/blog_page.html
@@ -41,7 +41,9 @@
                             </div>
                         </button>
                     </div>
-                    {% include "blog/includes/subscribe-author.html" with author=page.author user=user class="h-10 w-10 bg-opacity-80" %}
+                    {% if user.is_authenticated %}
+                        {% include "blog/includes/subscribe-author.html" with author=page.author user=user class="h-10 w-10 bg-opacity-80" %}
+                    {% endif %}
                 </div>
                 <div class="h-full absolute top-0 p-4 w-full flex flex-col justify-end gap-2 bg-gradient-to-t to-transparent from-yellow-500">
 
